fix: infinite loop on summary collapser
- changed the binary search algorithm to skip repeated offsetTop's
- remove "... see more" from summaries not taller than 20%

--- a/src/partials/experience.scss
+++ b/src/partials/experience.scss
@@ -49,7 +49,6 @@
     text-indent: 1em;
     font-size: 0.9em;
     line-height: 1.35em;
-    margin-bottom: 1em;
 
     > p {
       margin: 0 0 0.3em;
